src/test/ui/unused/unused-attr-crate.stderr
error: unused attribute
  --> $DIR/unused-attr-crate.rs:6:1
   |
LL | #![used]
   | ^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-attr-crate.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr-crate.rs:7:1
   |
LL | #![non_exhaustive]
   | ^^^^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr-crate.rs:8:1
   |
LL | #![inline]
   | ^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr-crate.rs:9:1
   |
LL | #![target_feature(enable = "")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr-crate.rs:10:1
   |
LL | #![naked]
   | ^^^^^^^^^

error: unused attribute
  --> $DIR/unused-attr-crate.rs:11:1
   |
LL | #![track_caller]
   | ^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

